--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,10 @@ body {
   text-align: center;
 }
 
+#dog-name {
+  font-weight: 700;
+}
+
 .image--circle {
   width: 180px;
   border-radius: 100px;
@@ -124,7 +128,7 @@ label {
 
 .column-text {
   width: 300px;
-  height: 220px;
+  height: 200px;
   text-align: left;
   line-height: 1.2em;
   margin-left: 25px;
@@ -136,6 +140,7 @@ label {
   background-color: #048eaa;
   font-size: 18px;
   color: #fff;
+  margin-top: 20px;
 }
 
 .footer {
