--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,47 @@ body {
   margin-left: 15px;
 }
 
+.preview {
+  position: relative;
+}
+
+.preview-card {
+  padding: 20px;
+  width: 160px;
+  height: 260px;
+  background-color: #75e2e6;
+  text-align: center;
+}
+
+.preview-title {
+  font-size: 18px;
+  text-transform: capitalize;
+}
+
+.preview-image {
+  width: 80px;
+  border-radius: 40px;
+}
+
+.preview-text {
+  font-size: 12px;
+}
+
+#how-preview {
+  position: absolute;
+  right: 295px;
+}
+
+#what-preview {
+  position: absolute;
+  right: 155px;
+}
+
+#facts-preview {
+  position: absolute;
+  right: 0px;
+}
+
 .name-the-dog-block {
   background: rgba(0, 0, 0, .5) url(images/park.jpg);
   background-blend-mode: darken;
@@ -108,6 +149,10 @@ label {
   text-align: center;
 }
 
+.content-wrapper {
+  height: 100%;
+}
+
 .column {
   width: 350px;
   display: inline-block;
@@ -128,7 +173,7 @@ label {
 
 .column-text {
   width: 300px;
-  height: 200px;
+  min-height: 210px;
   text-align: left;
   line-height: 1.2em;
   margin-left: 25px;
@@ -140,6 +185,50 @@ label {
   background-color: #048eaa;
   font-size: 18px;
   color: #fff;
+  margin-top: 20px;
+}
+
+.label {
+  font-size: 18px;
+  color: #000;
+}
+
+.column-modification {
+  margin-top: 40px;
+}
+
+.pixel {
+  width;: 200px;
+  height: 30px;
+  font-size: 18px;
+  margin-left: 10px;
+}
+
+.color-picker {
+  width: 150px;
+  height: 30px;
+  font-size: 18px;
+  margin-left: 10px;
+  margin-top: 20px;
+}
+
+.change-button {
+  width: 300px;
+  height: 46px;
+  background-color: #048eaa;
+  font-size: 18px;
+  color: #fff;
+  margin-top: 20px;
+}
+
+.show-button {
+  display: block;
+  margin: auto;
+  width: 300px;
+  height: 46px;
+  border: 2px solid #048eaa;
+  font-size: 18px;
+  color: #000;
   margin-top: 20px;
 }
 
@@ -165,4 +254,8 @@ label {
   height: 50px;
   margin-left: 10px;
   margin-right: 10px;
+}
+
+.hidden {
+  display: none;
 }
