--- a/styles.css
+++ b/styles.css
@@ -7,16 +7,9 @@ body {
 }
 
 .header {
-  height: 70px;
+  height: 100%;
   background-color: #75e2e6;
   border-bottom: 3px solid #048eaa;
-}
-
-@media (max-width: 480px) {
-  .header {
-    height: 300px;
-    padding: 10px;
-  }
 }
 
 .logo__image {
@@ -33,13 +26,6 @@ body {
   margin-top: 5px;
 }
 
-@media (max-width: 480px) {
-  .header-nav {
-    position: none;
-    display: block;
-  }
-}
-
 .list {
   list-style: none;
 }
@@ -53,17 +39,9 @@ body {
   margin-left: 15px;
 }
 
-@media (max-width: 480px) {
-  .list-item {
-    display: block;
-  }
-}
-
-.preview {
-  position: relative;
-}
-
 .preview-card {
+  position: absolute;
+  top: 60px;
   padding: 20px;
   width: 160px;
   height: 260px;
@@ -112,8 +90,9 @@ body {
 }
 
 .name-the-dog-form__wrapper {
-  width: 500px;
+  max-width: 500px;
   margin: auto;
+  text-align: center;
 }
 
 .title-1 {
@@ -121,6 +100,7 @@ body {
   text-transform: capitalize;
   font-weight: 400;
   text-align: center;
+  width: 100%;
 }
 
 #dog-name {
@@ -133,30 +113,31 @@ body {
   border: 5px solid #048eaa;
 }
 
-.name-the-dog-image {
-  margin: 0 155px 20px 155px;
-}
-
 .name-the-dog-form {
-  margin-left: 50px;
+  text-align: center;
 }
 
 label {
+  text-align: left;
   display: block;
+  margin-bottom: 10px;
+  padding-left: 10%;
 }
 
 #name-the-dog {
   display: block;
-  width: 384px;
+  width: 80%;
+  max-width: 384px;
   height: 40px;
-  margin-top: 10px;
   font-size: 18px;
   color: #000;
   padding-left: 10px;
+  margin: auto;
 }
 
 .name-the-dog-button {
-  width: 400px;
+  width: 84%;
+  max-width: 400px;
   height: 46px;
   margin-top: 20px;
   background-color: #75e2e6;
@@ -170,10 +151,12 @@ label {
 
 .content-wrapper {
   height: 100%;
+  margin-top: 20px;
 }
 
 .column {
-  width: 350px;
+  width: 25%;
+  max-width: 350px;
   display: inline-block;
   margin: 20px 5px 20px 5px;
 }
@@ -190,16 +173,25 @@ label {
   margin-bottom: 10px;
 }
 
+.text-wrapper {
+  width: 80%;
+  min-height: 240px;
+}
+
 .column-text {
-  width: 300px;
+  width: 100%;
+  max-width: 300px;
+  padding-left: 5px;
   min-height: 210px;
   text-align: left;
   line-height: 1.2em;
   margin-left: 25px;
+  margin-right: 0px;
 }
 
 .column-button {
-  width: 300px;
+  width: 85%;
+  max-width: 300px;
   height: 46px;
   background-color: #048eaa;
   font-size: 18px;
@@ -217,14 +209,16 @@ label {
 }
 
 .pixel {
-  width;: 200px;
+  width: 60%;
+  max-width: 200px;
   height: 30px;
   font-size: 18px;
   margin-left: 10px;
 }
 
 .color-picker {
-  width: 150px;
+  width: 50%;
+  max-width: 160px;
   height: 30px;
   font-size: 18px;
   margin-left: 10px;
@@ -232,7 +226,8 @@ label {
 }
 
 .change-button {
-  width: 300px;
+  width: 85%;
+  max-width: 300px;
   height: 46px;
   background-color: #048eaa;
   font-size: 18px;
@@ -245,6 +240,7 @@ label {
   margin: auto;
   width: 300px;
   height: 46px;
+  background-color: #fff;
   border: 2px solid #048eaa;
   font-size: 18px;
   color: #000;
@@ -277,4 +273,52 @@ label {
 
 .hidden {
   display: none;
+}
+
+@media (max-width: 480px) {
+
+  .column {
+    width: 100%;
+    display: block;
+    margin: auto;
+  }
+
+  .column-text {
+    margin-left: 10%;
+  }
+
+  .show-button {
+    display: none;
+  }
+}
+
+@media (max-width: 520px) {
+
+  .header-nav {
+    position: relative;
+    right: 10px;
+    display: block;
+  }
+
+  .list {
+    margin: 0px;
+  }
+
+  .list-item {
+    display: block;
+    margin-left: 0px;
+    margin-bottom: 20px;
+  }
+
+  .preview-card {
+    display: none;
+  }
+}
+
+@media (max-width: 830px) {
+  .column {
+    width: 50%;
+    display: inline-block;
+    margin: auto;
+  }
 }
