--- a/styles.css
+++ b/styles.css
@@ -275,6 +275,63 @@ label {
   display: none;
 }
 
+.shadow-animation {
+	-webkit-animation: shadow-animation 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: shadow-animation 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+@-webkit-keyframes shadow-animation {
+  0% {
+    -webkit-transform: translateZ(0) translateY(0);
+            transform: translateZ(0) translateY(0);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
+  100% {
+    -webkit-transform: translateZ(50px) translateY(-12px);
+            transform: translateZ(50px) translateY(-12px);
+    box-shadow: 0 20px 20px -20px rgba(4, 142, 170, 1);
+  }
+}
+@keyframes shadow-animation {
+  0% {
+    -webkit-transform: translateZ(0) translateY(0);
+            transform: translateZ(0) translateY(0);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
+  100% {
+    -webkit-transform: translateZ(50px) translateY(-12px);
+            transform: translateZ(50px) translateY(-12px);
+    box-shadow: 0 20px 20px -20px rgba(4, 142, 170, 1);
+  }
+}
+
+.slide-animation {
+	-webkit-animation: slide-animation 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: slide-animation 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+@-webkit-keyframes slide-animation {
+  0% {
+    -webkit-transform: translateY(100px);
+            transform: translateY(100px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+@keyframes slide-animation {
+  0% {
+    -webkit-transform: translateY(100px);
+            transform: translateY(100px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+
 @media (max-width: 480px) {
 
   .column {
